# AI-Stain-Fix

./: CHANGELOG.md  README.md  TZ.md  l10n.yaml  pubspec.yaml
.github/workflows/: build-apk.yml  flutter-ci.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
backend/: .env.example  docker-compose.yml  fly.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: ai.py  health.py
docs/: index.html  privacy-policy.html  terms-of-service.html
lib/: main.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart  app_ru.arb
lib/models/: chat_message.dart  fabric_result.dart  scan_package.dart  stain_result.dart
lib/providers/: chat_provider.dart  locale_provider.dart  stain_provider.dart  subscription_provider.dart  theme_provider.dart
lib/screens/: camera_screen.dart  chat_screen.dart  fabric_result_screen.dart  history_screen.dart  home_screen.dart  onboarding_screen.dart  privacy_policy_screen.dart  result_screen.dart  settings_screen.dart  splash_screen.dart  subscription_screen.dart  terms_screen.dart
lib/services/: ai_service.dart  analytics_service.dart  chat_service.dart  crash_service.dart  notification_service.dart  share_card_service.dart
lib/utils/: constants.dart  helpers.dart  theme.dart
lib/widgets/: app_logo.dart  cross_promo_widget.dart  share_card.dart
test/: widget_test.dart
web/: index.html  manifest.json
(+1 files in other folders)
