[project]
name = "ai-stain-fix-api"
version = "1.0.0"
description = "Backend API for AI Stain Fix — stain analysis via Gemini Vision AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
